--- a/src/_includes/components/photos_industrial.html
+++ b/src/_includes/components/photos_industrial.html
@@ -1,5 +1,5 @@
       
-        <DIV class="cs-image" href="">
+        <DIV class="cs-image">
             <picture class="cs-picture">
                 <source media="(max-width: 600px)" srcset="/assets/images/galleries/framing/1.jpg">
                 <source media="(min-width: 601px)" srcset="/assets/images/galleries/framing/1.jpg">
@@ -10,7 +10,7 @@
             </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
             <picture class="cs-picture">
                 <source media="(max-width: 600px)" srcset="/assets/images/galleries/framing/2.jpg">
                 <source media="(min-width: 601px)" srcset="/assets/images/galleries/framing/2.jpg">
@@ -23,7 +23,7 @@
 
 
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
             <picture class="cs-picture">
                 <source media="(max-width: 600px)" srcset="/assets/images/galleries/framing/4.jpg">
                 <source media="(min-width: 601px)" srcset="/assets/images/galleries/framing/4.jpg">
@@ -34,7 +34,7 @@
             </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
             <picture class="cs-picture">
                 <source media="(max-width: 600px)" srcset="/assets/images/galleries/framing/5.jpg">
                 <source media="(min-width: 601px)" srcset="/assets/images/galleries/framing/5.jpg">
@@ -45,7 +45,7 @@
             </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
             <picture class="cs-picture">
                 <source media="(max-width: 600px)" srcset="/assets/images/galleries/framing/6.jpg">
                 <source media="(min-width: 601px)" srcset="/assets/images/galleries/framing/6.jpg">
@@ -56,7 +56,7 @@
             </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
             <picture class="cs-picture">
                 <source media="(max-width: 600px)" srcset="/assets/images/galleries/framing/7.jpg">
                 <source media="(min-width: 601px)" srcset="/assets/images/galleries/framing/7.jpg">
@@ -67,7 +67,7 @@
             </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
             <picture class="cs-picture">
                 <source media="(max-width: 600px)" srcset="/assets/images/galleries/framing/8.jpg">
                 <source media="(min-width: 601px)" srcset="/assets/images/galleries/framing/8.jpg">
@@ -78,7 +78,7 @@
             </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
             <picture class="cs-picture">
                 <source media="(max-width: 600px)" srcset="/assets/images/galleries/framing/9.jpg">
                 <source media="(min-width: 601px)" srcset="/assets/images/galleries/framing/9.jpg">
@@ -89,7 +89,7 @@
             </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
             <picture class="cs-picture">
                 <source media="(max-width: 600px)" srcset="/assets/images/galleries/framing/10.jpg">
                 <source media="(min-width: 601px)" srcset="/assets/images/galleries/framing/10.jpg">
@@ -100,7 +100,7 @@
             </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
             <picture class="cs-picture">
                 <source media="(max-width: 600px)" srcset="/assets/images/galleries/framing/11.jpg">
                 <source media="(min-width: 601px)" srcset="/assets/images/galleries/framing/11.jpg">
@@ -111,7 +111,7 @@
             </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
             <picture class="cs-picture">
                 <source media="(max-width: 600px)" srcset="/assets/images/galleries/framing/12.jpg">
                 <source media="(min-width: 601px)" srcset="/assets/images/galleries/framing/12.jpg">
@@ -122,7 +122,7 @@
             </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
             <picture class="cs-picture">
                 <source media="(max-width: 600px)" srcset="/assets/images/galleries/framing/13.jpg">
                 <source media="(min-width: 601px)" srcset="/assets/images/galleries/framing/13.jpg">
@@ -133,7 +133,7 @@
             </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
             <picture class="cs-picture">
                 <source media="(max-width: 600px)" srcset="/assets/images/galleries/framing/14.jpg">
                 <source media="(min-width: 601px)" srcset="/assets/images/galleries/framing/14.jpg">
@@ -144,7 +144,7 @@
             </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
             <picture class="cs-picture">
                 <source media="(max-width: 600px)" srcset="/assets/images/galleries/framing/15.jpg">
                 <source media="(min-width: 601px)" srcset="/assets/images/galleries/framing/15.jpg">
@@ -155,7 +155,7 @@
             </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
             <picture class="cs-picture">
                 <source media="(max-width: 600px)" srcset="/assets/images/galleries/framing/16.jpg">
                 <source media="(min-width: 601px)" srcset="/assets/images/galleries/framing/16.jpg">
@@ -166,7 +166,7 @@
             </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
             <picture class="cs-picture">
                 <source media="(max-width: 600px)" srcset="/assets/images/galleries/framing/17.jpg">
                 <source media="(min-width: 601px)" srcset="/assets/images/galleries/framing/17.jpg">
@@ -178,7 +178,7 @@
 </DIV>
 
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/1.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/1.jpg">
@@ -189,7 +189,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/2.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/2.jpg">
@@ -200,7 +200,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/3.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/3.jpg">
@@ -211,7 +211,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/4.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/4.jpg">
@@ -222,7 +222,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/5.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/5.jpg">
@@ -233,7 +233,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/6.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/6.jpg">
@@ -244,7 +244,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/7.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/7.jpg">
@@ -255,7 +255,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/8.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/8.jpg">
@@ -266,7 +266,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/9.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/9.jpg">
@@ -277,7 +277,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/10.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/10.jpg">
@@ -288,7 +288,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/11.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/11.jpg">
@@ -299,7 +299,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/12.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/12.jpg">
@@ -310,7 +310,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/13.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/13.jpg">
@@ -322,7 +322,7 @@
 </div>
 
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/15.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/15.jpg">
@@ -333,7 +333,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/16.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/16.jpg">
@@ -344,7 +344,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/17.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/17.jpg">
@@ -355,7 +355,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/18.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/18.jpg">
@@ -366,7 +366,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/19.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/19.jpg">
@@ -377,7 +377,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/20.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/20.jpg">
@@ -388,7 +388,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/21.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/21.jpg">
@@ -399,7 +399,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/22.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/22.jpg">
@@ -410,7 +410,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/23.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/23.jpg">
@@ -421,7 +421,7 @@
     </div>
 </div>
 
-<div class="cs-image" href="">
+<div class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/24.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/24.jpg">
