--- a/src/_includes/components/photos_residential.html
+++ b/src/_includes/components/photos_residential.html
@@ -1,4 +1,4 @@
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/wallpaper/1.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/wallpaper/1.jpg">
@@ -9,7 +9,7 @@
     </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/wallpaper/2.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/wallpaper/2.jpg">
@@ -20,7 +20,7 @@
     </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/wallpaper/3.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/wallpaper/3.jpg">
@@ -31,7 +31,7 @@
     </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/wallpaper/4.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/wallpaper/4.jpg">
@@ -42,7 +42,7 @@
     </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/wallpaper/5.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/wallpaper/5.jpg">
@@ -53,7 +53,7 @@
     </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/wallpaper/6.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/wallpaper/6.jpg">
@@ -64,7 +64,7 @@
     </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/wallpaper/7.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/wallpaper/7.jpg">
@@ -75,7 +75,7 @@
     </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/wallpaper/8.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/wallpaper/8.jpg">
@@ -86,7 +86,7 @@
     </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/wallpaper/9.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/wallpaper/9.jpg">
@@ -97,7 +97,7 @@
     </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/wallpaper/10.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/wallpaper/10.jpg">
@@ -108,7 +108,7 @@
     </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/wallpaper/11.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/wallpaper/11.jpg">
@@ -119,7 +119,7 @@
     </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/wallpaper/12.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/wallpaper/12.jpg">
@@ -130,7 +130,7 @@
     </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/wallpaper/13.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/wallpaper/13.jpg">
@@ -141,7 +141,7 @@
     </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/wallpaper/14.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/wallpaper/14.jpg">
@@ -152,7 +152,7 @@
     </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/wallpaper/15.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/wallpaper/15.jpg">
@@ -163,7 +163,7 @@
     </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/wallpaper/16.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/wallpaper/16.jpg">
@@ -174,7 +174,7 @@
     </div>
 </DIV>
 
-<DIV class="cs-image" href="">
+<DIV class="cs-image">
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/galleries/wallpaper/17.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/galleries/wallpaper/17.jpg">
