--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -13,6 +13,7 @@
         --primaryLight:  #4eef1a;
         --primary: #4eef1a;
         --primaryDark: black;
+        --primaryDarkDark: black;
         --headerScroll: #1A1A1A;
         --mobileNav: white;
         --callBg: black;
