--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -295,12 +295,12 @@
           <!-- Contact Info -->
           <span class="cs-header">Contact us today</span>
           <ul class="cs-ul">
-              <li class="cs-li">
+              <!--<li class="cs-li">
                   <a class="cs-link" href="tel:(618) 771-0767">
                       <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/phone-white.svg" alt="phone icon" width="24" height="24">
                       (618) 771-0767
                   </a>
-              </li>
+              </li>-->
               <li class="cs-li">
                   <a class="cs-link" href="mailto:zach@abstractconstruction.net">
                       <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/email-white.svg" alt="email icon" width="24" height="24">
