--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -12,6 +12,7 @@
     --primaryLight: #4eef1a;
     --primary: #4eef1a;
     --primaryDark: black;
+    --primaryDarkDark: black;
     --headerScroll: #1A1A1A;
     --mobileNav: white;
     --callBg: black;
