--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -77,6 +77,7 @@
             text-align: center;
             background-color: var(--callBg);
             padding-bottom:180px;
+            display: none;
         }
 
      
