--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -2,6 +2,10 @@
 /*-- -------------------------- -->
 <---        Core Styles         -->
 <--- -------------------------- -*/
+.hidden {
+  display: none;
+}
+
 * {
   transition: all ease 0.3s;
 }
