--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -4,6 +4,8 @@
 <---        Core Styles         -->
 <--- -------------------------- -*/
 
+.hidden {display: none;}
+
 * {transition: all ease .3s;}
 
 /* CodeStitch Root and Helpers */
