--- a/src/_includes/components/9form.html
+++ b/src/_includes/components/9form.html
@@ -163,7 +163,13 @@
 
           </div>
           <!--Form-->
-          <form netlify class="cs-form" id="cs-form-587" name="Contact Form" method="post">
+          <form netlify  netlify-honeypot="bot-field"
+          data-netlify="true" class="cs-form" id="cs-form-587" name="Contact Form" method="post">
+            <p class="hidden">
+                <label>
+                  Don’t fill this out if you’re human: <input name="bot-field" />
+                </label>
+              </p>
               <label class="cs-label">
                   Name
                   <input class="cs-input" required type="text" id="name-587" name="name" placeholder="Name">
