--- a/src/_includes/components/hero.html
+++ b/src/_includes/components/hero.html
@@ -194,7 +194,7 @@
 <section id="hero-2041">
   <div class="cs-container">
       <div class="cs-content">
-          <span class="cs-topper hero-topper" style="color: #4EEF1A; margin-bottom: 20px;" data-aos="fade-up">St. Louis, MO & Surrouning Area</span>
+          <span class="cs-topper hero-topper" style="color: #4EEF1A; margin-bottom: 20px;" data-aos="fade-up">St. Louis, MO & Surrounding Area</span>
           <h1 class="cs-title">Commercial Construction + Home <span style="color:#4EEF1A">&</span> Business Remodeling</h1>
           <p class="cs-text">Your project deserves more than a standard contractor. It deserves vision, expertise, and craftsmanship that outshines the rest. While others stick to templates, we create custom, high end solutions that set new standards in construction and design.</p>
           <a href="/contact" class="cs-button-solid" aria-label="read more about us">
