--- a/src/_includes/components/testimonial.html
+++ b/src/_includes/components/testimonial.html
@@ -147,7 +147,7 @@
   /* Tablet - 768px */
   @media only screen and (min-width: 48rem) {
       #reviews-245 .cs-container {
-          max-width: 80rem;
+          max-width: 120rem;
           padding-bottom:200px;
       }
       #reviews-245 .cs-card-group {
@@ -162,7 +162,7 @@
       #reviews-245 .cs-item {
           /* we do this so it's stackable. You can add new any number of reviews you want and they will stack and center in the middle. We dont use grid because if you have an odd number of reviews, they don't stay centered.  They align with their grid lines. If you want 4 reviews in a row, lower the width under 22.5vw to get the desired sizes fit 4 in a row and then stack when you add more*/
           width: clamp(61.5%, 30vw, 62.3%);
-          max-width: 900px;
+          max-width: 600px;
           align-content: space-between;
       }
       #reviews-245 .cs-flex-group {
@@ -203,26 +203,69 @@
         </div>
      <ul class="cs-card-group">
             
-            <li class="cs-item">
-                <svg class="cs-item-img" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M48 24C48 10.7438 37.2562 0 24 0C10.7438 0 0 10.7438 0 24C0 35.9813 8.775 45.9094 20.25 47.7094V30.9375H14.1562V24H20.25V18.7125C20.25 12.6984 23.8313 9.375 29.3156 9.375C31.9406 9.375 34.6875 9.84375 34.6875 9.84375V15.75H31.6594C28.6781 15.75 27.75 17.6016 27.75 19.5V24H34.4062L33.3422 30.9375H27.75V47.7094C39.225 45.9094 48 35.9813 48 24Z" fill="#1877F2"/>
-                    <path d="M33.3422 30.9375L34.4062 24H27.75V19.5C27.75 17.6016 28.6781 15.75 31.6594 15.75H34.6875V9.84375C34.6875 9.84375 31.9406 9.375 29.3156 9.375C23.8313 9.375 20.25 12.6984 20.25 18.7125V24H14.1562V30.9375H20.25V47.7094C21.4734 47.9016 22.725 48 24 48C25.275 48 26.5266 47.9016 27.75 47.7094V30.9375H33.3422Z" fill="white"/>
-                    </svg>                <p class="cs-item-text">
-                    They do great work. Call for a quote.                <div class="cs-flex-group">
-                    <span class="cs-reviewer">
-                      <a target="_blank" href="https://www.facebook.com/profile.php?id=100076881590011&sk=reviews">Facebook Review</a> 
-                    </span>
-                    <span class="cs-rating" style="color:black; font-weight: bold;">5.0</span>
-                    <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="stars" width="96" height="16">
-                </div>
-            </li>
+        <li class="cs-item">
+            <svg class="cs-item-img"  height="48"  viewBox="0 0 48 48"  width="48" xmlns="http://www.w3.org/2000/svg" fill="none" ><path d="M0 24C0 10.7452 10.7452 0 24 0C37.2548 0 48 10.7452 48 24C48 37.2548 37.2548 48 24 48C10.7452 48 0 37.2548 0 24Z" fill="white"></path><path d="M24 17.6213C25.9529 17.6213 27.2702 18.4649 28.0214 19.1698L30.9565 16.304C29.1538 14.6284 26.808 13.6 24 13.6C19.9325 13.6 16.4196 15.9342 14.7094 19.3315L18.072 21.9431C18.9156 19.4355 21.2498 17.6213 24 17.6213V17.6213Z" fill="#EA4335"></path><path d="M33.984 24.2311C33.984 23.376 33.9147 22.752 33.7644 22.1049H24V25.9644H29.7316C29.616 26.9235 28.992 28.368 27.6053 29.3386L30.8871 31.8809C32.8516 30.0666 33.984 27.3973 33.984 24.2311V24.2311Z" fill="#4285F4"></path><path d="M18.0836 26.0569C17.864 25.4098 17.7369 24.7164 17.7369 24C17.7369 23.2835 17.864 22.5902 18.072 21.9431L14.7093 19.3315C14.0045 20.7413 13.6 22.3244 13.6 24C13.6 25.6755 14.0045 27.2587 14.7093 28.6684L18.0836 26.0569V26.0569Z" fill="#FBBC05"></path><path d="M24 34.4C26.808 34.4 29.1653 33.4756 30.8871 31.8809L27.6053 29.3387C26.7271 29.9511 25.5484 30.3787 24 30.3787C21.2498 30.3787 18.9156 28.5644 18.0836 26.0569L14.7209 28.6684C16.4311 32.0658 19.9324 34.4 24 34.4V34.4Z" fill="#34A853"></path></svg>              <p class="cs-item-text">
+                
+                Zach and his team were amazing. They understood our vision and delivered a great end result. The guys were friendly, helpful on time and always available to answer my questions. While they were working on our house they made sure to cover the floors and all of our other furniture to ensure that the renovation didn’t make a mess and destroy our furniture. I would absolutely recommend Zach and his team! Thank you for a job well done!!
+                
+                
+                
+                <div class="cs-flex-group">
+                <span class="cs-reviewer">
+                  <a target="_blank" href="https://maps.app.goo.gl/2fttBjLEmPa95tya8">Google Review</a> 
+                </span>
+                <span class="cs-rating" style="color:black; font-weight: bold;">5.0</span>
+                <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="stars" width="96" height="16">
+            </div>
+        </li>
+
+
+        <li class="cs-item">
+            <svg class="cs-item-img"  height="48"  viewBox="0 0 48 48"  width="48" xmlns="http://www.w3.org/2000/svg" fill="none" ><path d="M0 24C0 10.7452 10.7452 0 24 0C37.2548 0 48 10.7452 48 24C48 37.2548 37.2548 48 24 48C10.7452 48 0 37.2548 0 24Z" fill="white"></path><path d="M24 17.6213C25.9529 17.6213 27.2702 18.4649 28.0214 19.1698L30.9565 16.304C29.1538 14.6284 26.808 13.6 24 13.6C19.9325 13.6 16.4196 15.9342 14.7094 19.3315L18.072 21.9431C18.9156 19.4355 21.2498 17.6213 24 17.6213V17.6213Z" fill="#EA4335"></path><path d="M33.984 24.2311C33.984 23.376 33.9147 22.752 33.7644 22.1049H24V25.9644H29.7316C29.616 26.9235 28.992 28.368 27.6053 29.3386L30.8871 31.8809C32.8516 30.0666 33.984 27.3973 33.984 24.2311V24.2311Z" fill="#4285F4"></path><path d="M18.0836 26.0569C17.864 25.4098 17.7369 24.7164 17.7369 24C17.7369 23.2835 17.864 22.5902 18.072 21.9431L14.7093 19.3315C14.0045 20.7413 13.6 22.3244 13.6 24C13.6 25.6755 14.0045 27.2587 14.7093 28.6684L18.0836 26.0569V26.0569Z" fill="#FBBC05"></path><path d="M24 34.4C26.808 34.4 29.1653 33.4756 30.8871 31.8809L27.6053 29.3387C26.7271 29.9511 25.5484 30.3787 24 30.3787C21.2498 30.3787 18.9156 28.5644 18.0836 26.0569L14.7209 28.6684C16.4311 32.0658 19.9324 34.4 24 34.4V34.4Z" fill="#34A853"></path></svg>              <p class="cs-item-text">
+                Zach was honest, professional and quick with the bid and project. I would recommend them for all your upgrades. We will definitely be using them again!             <div class="cs-flex-group">
+                <span class="cs-reviewer">
+                  <a target="_blank" href="https://maps.app.goo.gl/t38rsxz7Up7VtrAv9">Google Review</a> 
+                </span>
+                <span class="cs-rating" style="color:black; font-weight: bold;">5.0</span>
+                <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="stars" width="96" height="16">
+            </div>
+        </li>
+
+
+        <li class="cs-item">
+            <svg class="cs-item-img"  height="48"  viewBox="0 0 48 48"  width="48" xmlns="http://www.w3.org/2000/svg" fill="none" ><path d="M0 24C0 10.7452 10.7452 0 24 0C37.2548 0 48 10.7452 48 24C48 37.2548 37.2548 48 24 48C10.7452 48 0 37.2548 0 24Z" fill="white"></path><path d="M24 17.6213C25.9529 17.6213 27.2702 18.4649 28.0214 19.1698L30.9565 16.304C29.1538 14.6284 26.808 13.6 24 13.6C19.9325 13.6 16.4196 15.9342 14.7094 19.3315L18.072 21.9431C18.9156 19.4355 21.2498 17.6213 24 17.6213V17.6213Z" fill="#EA4335"></path><path d="M33.984 24.2311C33.984 23.376 33.9147 22.752 33.7644 22.1049H24V25.9644H29.7316C29.616 26.9235 28.992 28.368 27.6053 29.3386L30.8871 31.8809C32.8516 30.0666 33.984 27.3973 33.984 24.2311V24.2311Z" fill="#4285F4"></path><path d="M18.0836 26.0569C17.864 25.4098 17.7369 24.7164 17.7369 24C17.7369 23.2835 17.864 22.5902 18.072 21.9431L14.7093 19.3315C14.0045 20.7413 13.6 22.3244 13.6 24C13.6 25.6755 14.0045 27.2587 14.7093 28.6684L18.0836 26.0569V26.0569Z" fill="#FBBC05"></path><path d="M24 34.4C26.808 34.4 29.1653 33.4756 30.8871 31.8809L27.6053 29.3387C26.7271 29.9511 25.5484 30.3787 24 30.3787C21.2498 30.3787 18.9156 28.5644 18.0836 26.0569L14.7209 28.6684C16.4311 32.0658 19.9324 34.4 24 34.4V34.4Z" fill="#34A853"></path></svg>              <p class="cs-item-text">
+                Turned our old farm house into a special place. We were worried about finding the right company since our house is 100 years old. But we could not have picked a better one. They were unbelievable and did a truly incredible job on our house.              <div class="cs-flex-group">
+                <span class="cs-reviewer">
+                  <a target="_blank" href="https://maps.app.goo.gl/JNNr7p2bkE4wggvq5">Google Review</a> 
+                </span>
+                <span class="cs-rating" style="color:black; font-weight: bold;">5.0</span>
+                <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="stars" width="96" height="16">
+            </div>
+        </li>
+
+
+        
+
+        <li class="cs-item">
+            <svg class="cs-item-img" width="38" height="38" viewBox="0 0 58 58" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M48 24C48 10.7438 37.2562 0 24 0C10.7438 0 0 10.7438 0 24C0 35.9813 8.775 45.9094 20.25 47.7094V30.9375H14.1562V24H20.25V18.7125C20.25 12.6984 23.8313 9.375 29.3156 9.375C31.9406 9.375 34.6875 9.84375 34.6875 9.84375V15.75H31.6594C28.6781 15.75 27.75 17.6016 27.75 19.5V24H34.4062L33.3422 30.9375H27.75V47.7094C39.225 45.9094 48 35.9813 48 24Z" fill="#1877F2"/>
+                <path d="M33.3422 30.9375L34.4062 24H27.75V19.5C27.75 17.6016 28.6781 15.75 31.6594 15.75H34.6875V9.84375C34.6875 9.84375 31.9406 9.375 29.3156 9.375C23.8313 9.375 20.25 12.6984 20.25 18.7125V24H14.1562V30.9375H20.25V47.7094C21.4734 47.9016 22.725 48 24 48C25.275 48 26.5266 47.9016 27.75 47.7094V30.9375H33.3422Z" fill="white"/>
+                </svg>                <p class="cs-item-text">
+                They do great work. Call for a quote.                <div class="cs-flex-group">
+                <span class="cs-reviewer">
+                  <a target="_blank" href="https://www.facebook.com/profile.php?id=100076881590011&sk=reviews">Facebook Review</a> 
+                </span>
+                <span class="cs-rating" style="color:black; font-weight: bold;">5.0</span>
+                <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="stars" width="96" height="16">
+            </div>
+        </li>
         
            
         </ul>
         
 
   
-        <a class="cs-button-solid" style="margin: 0px; display: inline-block;" target="_blank" href="https://www.facebook.com/profile.php?id=100076881590011&sk=reviews" >Leave Us a Review</a>
+        <a class="cs-button-solid" style="margin: 0px; display: inline-block;" target="_blank" href="https://g.page/r/CU90Fw4lAHzGEAE/review" >Leave Us a Review</a>
   
  
       
