--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -246,17 +246,15 @@
       </a><div class="cs-topper">Build smarter. </div>
           <h2 class="cs-title" style="font-size: 2rem;">Build better. Build together.</h2>
           <div class="cs-social">
-            <a class="cs-social-link" aria-label="visit facebook profile" href="">
+            <a target="_blank" class="cs-social-link" aria-label="visit facebook profile" href="https://www.facebook.com/profile.php?id=100076881590011">
               <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/facebook-1a.svg" alt="facebook" width="11" height="11">
           </a>
 
-          <a class="cs-social-link" aria-label="visit facebook profile" href="">
+          <a target="_blank" class="cs-social-link" aria-label="visit facebook profile" href="https://www.google.com/maps/place/Abstract+Construction+LLC/@38.7170776,-90.0699593,17z/data=!3m1!4b1!4m6!3m5!1s0xf76097532cf735b:0xc67c00250e17744f!8m2!3d38.7170776!4d-90.0699593!16s%2Fg%2F11x2wg6qtb?entry=ttu&g_ep=EgoyMDI1MDUwMy4wIKXMDSoASAFQAw%3D%3D">
             <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/google-1a.svg" alt="facebook" width="11" height="11">
         </a>
         
-              <a class="cs-social-link" aria-label="visit instagram profile" href="">
-                  <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/instagram-1a.svg" alt="instagram" width="11" height="11">
-              </a>
+             
        
 
              
