--- a/src/_includes/components/testimonial.html
+++ b/src/_includes/components/testimonial.html
@@ -212,7 +212,7 @@
                 
                 <div class="cs-flex-group">
                 <span class="cs-reviewer">
-                  <a target="_blank" href="https://maps.app.goo.gl/2fttBjLEmPa95tya8">Google Review</a> 
+                  <a style="color:black;" target="_blank" href="https://maps.app.goo.gl/2fttBjLEmPa95tya8">Google Review</a> 
                 </span>
                 <span class="cs-rating" style="color:black; font-weight: bold;">5.0</span>
                 <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="stars" width="96" height="16">
@@ -228,7 +228,7 @@
                 
                 <div class="cs-flex-group">
                 <span class="cs-reviewer">
-                  <a target="_blank" href="https://maps.app.goo.gl/8aDurVdut18JJAtW7">Google Review</a> 
+                  <a style="color:black;" target="_blank" href="https://maps.app.goo.gl/8aDurVdut18JJAtW7">Google Review</a> 
                 </span>
                 <span class="cs-rating" style="color:black; font-weight: bold;">5.0</span>
                 <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="stars" width="96" height="16">
@@ -240,7 +240,7 @@
             <svg class="cs-item-img"  height="48"  viewBox="0 0 48 48"  width="48" xmlns="http://www.w3.org/2000/svg" fill="none" ><path d="M0 24C0 10.7452 10.7452 0 24 0C37.2548 0 48 10.7452 48 24C48 37.2548 37.2548 48 24 48C10.7452 48 0 37.2548 0 24Z" fill="white"></path><path d="M24 17.6213C25.9529 17.6213 27.2702 18.4649 28.0214 19.1698L30.9565 16.304C29.1538 14.6284 26.808 13.6 24 13.6C19.9325 13.6 16.4196 15.9342 14.7094 19.3315L18.072 21.9431C18.9156 19.4355 21.2498 17.6213 24 17.6213V17.6213Z" fill="#EA4335"></path><path d="M33.984 24.2311C33.984 23.376 33.9147 22.752 33.7644 22.1049H24V25.9644H29.7316C29.616 26.9235 28.992 28.368 27.6053 29.3386L30.8871 31.8809C32.8516 30.0666 33.984 27.3973 33.984 24.2311V24.2311Z" fill="#4285F4"></path><path d="M18.0836 26.0569C17.864 25.4098 17.7369 24.7164 17.7369 24C17.7369 23.2835 17.864 22.5902 18.072 21.9431L14.7093 19.3315C14.0045 20.7413 13.6 22.3244 13.6 24C13.6 25.6755 14.0045 27.2587 14.7093 28.6684L18.0836 26.0569V26.0569Z" fill="#FBBC05"></path><path d="M24 34.4C26.808 34.4 29.1653 33.4756 30.8871 31.8809L27.6053 29.3387C26.7271 29.9511 25.5484 30.3787 24 30.3787C21.2498 30.3787 18.9156 28.5644 18.0836 26.0569L14.7209 28.6684C16.4311 32.0658 19.9324 34.4 24 34.4V34.4Z" fill="#34A853"></path></svg>              <p class="cs-item-text">
                 Zach was honest, professional and quick with the bid and project. I would recommend them for all your upgrades. We will definitely be using them again!             <div class="cs-flex-group">
                 <span class="cs-reviewer">
-                  <a target="_blank" href="https://maps.app.goo.gl/t38rsxz7Up7VtrAv9">Google Review</a> 
+                  <a style="color:black;" target="_blank" href="https://maps.app.goo.gl/t38rsxz7Up7VtrAv9">Google Review</a> 
                 </span>
                 <span class="cs-rating" style="color:black; font-weight: bold;">5.0</span>
                 <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="stars" width="96" height="16">
@@ -249,10 +249,95 @@
 
 
         <li class="cs-item">
+            <svg class="cs-item-img" height="48" viewBox="0 0 48 48" width="48" xmlns="http://www.w3.org/2000/svg" fill="none">
+              <path d="M0 24C0 10.7452 10.7452 0 24 0C37.2548 0 48 10.7452 48 24C48 37.2548 37.2548 48 24 48C10.7452 48 0 37.2548 0 24Z" fill="white"></path>
+              <path d="M24 17.6213C25.9529 17.6213 27.2702 18.4649 28.0214 19.1698L30.9565 16.304C29.1538 14.6284 26.808 13.6 24 13.6C19.9325 13.6 16.4196 15.9342 14.7094 19.3315L18.072 21.9431C18.9156 19.4355 21.2498 17.6213 24 17.6213Z" fill="#EA4335"></path>
+              <path d="M33.984 24.2311C33.984 23.376 33.9147 22.752 33.7644 22.1049H24V25.9644H29.7316C29.616 26.9235 28.992 28.368 27.6053 29.3386L30.8871 31.8809C32.8516 30.0666 33.984 27.3973 33.984 24.2311Z" fill="#4285F4"></path>
+              <path d="M18.0836 26.0569C17.864 25.4098 17.7369 24.7164 17.7369 24C17.7369 23.2835 17.864 22.5902 18.072 21.9431L14.7093 19.3315C14.0045 20.7413 13.6 22.3244 13.6 24C13.6 25.6755 14.0045 27.2587 14.7093 28.6684L18.0836 26.0569Z" fill="#FBBC05"></path>
+              <path d="M24 34.4C26.808 34.4 29.1653 33.4756 30.8871 31.8809L27.6053 29.3387C26.7271 29.9511 25.5484 30.3787 24 30.3787C21.2498 30.3787 18.9156 28.5644 18.0836 26.0569L14.7209 28.6684C16.4311 32.0658 19.9324 34.4 24 34.4Z" fill="#34A853"></path>
+            </svg>
+            <p class="cs-item-text">
+              Amazing work! We needed our kitchen floors replaced to sell our home and Zach and his team killed it! Quoted and job done in as quick as 3 days! Done at a great price. I highly recommend Zach and his team!
+            </p>
+            <div class="cs-flex-group">
+              <span class="cs-reviewer">
+                <a style="color:black;" target="_blank" href="https://maps.app.goo.gl/3NWXFtMERxYzoRDf6">Google Review</a> 
+              </span>
+              <span class="cs-rating" style="color:black; font-weight: bold;">5.0</span>
+              <img class="cs-item-stars" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="stars" width="96" height="16" loading="lazy" decoding="async">
+            </div>
+          </li>
+          
+          <li class="cs-item">
+            <svg class="cs-item-img"  height="48"  viewBox="0 0 48 48"  width="48" xmlns="http://www.w3.org/2000/svg" fill="none" ><path d="M0 24C0 10.7452 10.7452 0 24 0C37.2548 0 48 10.7452 48 24C48 37.2548 37.2548 48 24 48C10.7452 48 0 37.2548 0 24Z" fill="white"></path><path d="M24 17.6213C25.9529 17.6213 27.2702 18.4649 28.0214 19.1698L30.9565 16.304C29.1538 14.6284 26.808 13.6 24 13.6C19.9325 13.6 16.4196 15.9342 14.7094 19.3315L18.072 21.9431C18.9156 19.4355 21.2498 17.6213 24 17.6213V17.6213Z" fill="#EA4335"></path><path d="M33.984 24.2311C33.984 23.376 33.9147 22.752 33.7644 22.1049H24V25.9644H29.7316C29.616 26.9235 28.992 28.368 27.6053 29.3386L30.8871 31.8809C32.8516 30.0666 33.984 27.3973 33.984 24.2311V24.2311Z" fill="#4285F4"></path><path d="M18.0836 26.0569C17.864 25.4098 17.7369 24.7164 17.7369 24C17.7369 23.2835 17.864 22.5902 18.072 21.9431L14.7093 19.3315C14.0045 20.7413 13.6 22.3244 13.6 24C13.6 25.6755 14.0045 27.2587 14.7093 28.6684L18.0836 26.0569V26.0569Z" fill="#FBBC05"></path><path d="M24 34.4C26.808 34.4 29.1653 33.4756 30.8871 31.8809L27.6053 29.3387C26.7271 29.9511 25.5484 30.3787 24 30.3787C21.2498 30.3787 18.9156 28.5644 18.0836 26.0569L14.7209 28.6684C16.4311 32.0658 19.9324 34.4 24 34.4V34.4Z" fill="#34A853"></path></svg>
+            <p class="cs-item-text">
+              I recently acquired an existing business that was in need of a significant remodel which included demolition, new walls, new floors, new break room, paint, electric, and overall refresh. I could not be happier with the work that Abstract did for us! They have a great crew that really cares about the work and results and made sure not to interfere with the daily operations of the business. They worked nights and weekends to avoid disrupting the business and were the best contractor I think I have ever worked with in my career. I would highly recommend them for anyone looking to do any construction projects. They were reliable, responsive, and executed to their schedule as planned. Great company and great team to work with!
+            </p>
+            <div class="cs-flex-group">
+              <span class="cs-reviewer">
+                <a style="color:black;" target="_blank" href="https://maps.app.goo.gl/5CQkBhEwTs8GsxFfA">Google Review</a> 
+              </span>
+              <span class="cs-rating" style="color:black; font-weight: bold;">5.0</span>
+              <img class="cs-item-stars" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="stars" width="96" height="16" loading="lazy" decoding="async">
+            </div>
+          </li>
+          
+          <li class="cs-item">
+
+
+            <svg class="cs-item-img"  height="48"  viewBox="0 0 48 48"  width="48" xmlns="http://www.w3.org/2000/svg" fill="none" ><path d="M0 24C0 10.7452 10.7452 0 24 0C37.2548 0 48 10.7452 48 24C48 37.2548 37.2548 48 24 48C10.7452 48 0 37.2548 0 24Z" fill="white"></path><path d="M24 17.6213C25.9529 17.6213 27.2702 18.4649 28.0214 19.1698L30.9565 16.304C29.1538 14.6284 26.808 13.6 24 13.6C19.9325 13.6 16.4196 15.9342 14.7094 19.3315L18.072 21.9431C18.9156 19.4355 21.2498 17.6213 24 17.6213V17.6213Z" fill="#EA4335"></path><path d="M33.984 24.2311C33.984 23.376 33.9147 22.752 33.7644 22.1049H24V25.9644H29.7316C29.616 26.9235 28.992 28.368 27.6053 29.3386L30.8871 31.8809C32.8516 30.0666 33.984 27.3973 33.984 24.2311V24.2311Z" fill="#4285F4"></path><path d="M18.0836 26.0569C17.864 25.4098 17.7369 24.7164 17.7369 24C17.7369 23.2835 17.864 22.5902 18.072 21.9431L14.7093 19.3315C14.0045 20.7413 13.6 22.3244 13.6 24C13.6 25.6755 14.0045 27.2587 14.7093 28.6684L18.0836 26.0569V26.0569Z" fill="#FBBC05"></path><path d="M24 34.4C26.808 34.4 29.1653 33.4756 30.8871 31.8809L27.6053 29.3387C26.7271 29.9511 25.5484 30.3787 24 30.3787C21.2498 30.3787 18.9156 28.5644 18.0836 26.0569L14.7209 28.6684C16.4311 32.0658 19.9324 34.4 24 34.4V34.4Z" fill="#34A853"></path></svg>           
+           
+            <p class="cs-item-text">
+              Zach and his team did a wonderful job of installing new flooring in my home. They were very professional, showed up on time and finished the job in 2 days. I would highly recommend them for any projects you plan on.
+            </p>
+            <div class="cs-flex-group">
+              <span class="cs-reviewer">
+                <a style="color:black;" target="_blank" href="https://maps.app.goo.gl/AAHnNkqV8hWFrPVs9">Google Review</a> 
+              </span>
+              <span class="cs-rating" style="color:black; font-weight: bold;">5.0</span>
+              <img class="cs-item-stars" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="stars" width="96" height="16" loading="lazy" decoding="async">
+            </div>
+          </li>
+          
+          <li class="cs-item">
+            
+            <svg class="cs-item-img"  height="48"  viewBox="0 0 48 48"  width="48" xmlns="http://www.w3.org/2000/svg" fill="none" ><path d="M0 24C0 10.7452 10.7452 0 24 0C37.2548 0 48 10.7452 48 24C48 37.2548 37.2548 48 24 48C10.7452 48 0 37.2548 0 24Z" fill="white"></path><path d="M24 17.6213C25.9529 17.6213 27.2702 18.4649 28.0214 19.1698L30.9565 16.304C29.1538 14.6284 26.808 13.6 24 13.6C19.9325 13.6 16.4196 15.9342 14.7094 19.3315L18.072 21.9431C18.9156 19.4355 21.2498 17.6213 24 17.6213V17.6213Z" fill="#EA4335"></path><path d="M33.984 24.2311C33.984 23.376 33.9147 22.752 33.7644 22.1049H24V25.9644H29.7316C29.616 26.9235 28.992 28.368 27.6053 29.3386L30.8871 31.8809C32.8516 30.0666 33.984 27.3973 33.984 24.2311V24.2311Z" fill="#4285F4"></path><path d="M18.0836 26.0569C17.864 25.4098 17.7369 24.7164 17.7369 24C17.7369 23.2835 17.864 22.5902 18.072 21.9431L14.7093 19.3315C14.0045 20.7413 13.6 22.3244 13.6 24C13.6 25.6755 14.0045 27.2587 14.7093 28.6684L18.0836 26.0569V26.0569Z" fill="#FBBC05"></path><path d="M24 34.4C26.808 34.4 29.1653 33.4756 30.8871 31.8809L27.6053 29.3387C26.7271 29.9511 25.5484 30.3787 24 30.3787C21.2498 30.3787 18.9156 28.5644 18.0836 26.0569L14.7209 28.6684C16.4311 32.0658 19.9324 34.4 24 34.4V34.4Z" fill="#34A853"></path></svg>
+
+            <p class="cs-item-text">
+              Great company! They do exceptional work and outstanding customer service. They’ve done many different jobs for us and all surpassed our expectations. We definitely recommend them.
+            </p>
+            <div class="cs-flex-group">
+              <span class="cs-reviewer">
+                <a style="color:black;" target="_blank" href="https://maps.app.goo.gl/wC7wqa1NmrncuACb9">Google Review</a> 
+              </span>
+              <span class="cs-rating" style="color:black; font-weight: bold;">5.0</span>
+              <img class="cs-item-stars" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="stars" width="96" height="16" loading="lazy" decoding="async">
+            </div>
+          </li>
+          
+          <li class="cs-item">
+           
+            
+            <svg class="cs-item-img"  height="48"  viewBox="0 0 48 48"  width="48" xmlns="http://www.w3.org/2000/svg" fill="none" ><path d="M0 24C0 10.7452 10.7452 0 24 0C37.2548 0 48 10.7452 48 24C48 37.2548 37.2548 48 24 48C10.7452 48 0 37.2548 0 24Z" fill="white"></path><path d="M24 17.6213C25.9529 17.6213 27.2702 18.4649 28.0214 19.1698L30.9565 16.304C29.1538 14.6284 26.808 13.6 24 13.6C19.9325 13.6 16.4196 15.9342 14.7094 19.3315L18.072 21.9431C18.9156 19.4355 21.2498 17.6213 24 17.6213V17.6213Z" fill="#EA4335"></path><path d="M33.984 24.2311C33.984 23.376 33.9147 22.752 33.7644 22.1049H24V25.9644H29.7316C29.616 26.9235 28.992 28.368 27.6053 29.3386L30.8871 31.8809C32.8516 30.0666 33.984 27.3973 33.984 24.2311V24.2311Z" fill="#4285F4"></path><path d="M18.0836 26.0569C17.864 25.4098 17.7369 24.7164 17.7369 24C17.7369 23.2835 17.864 22.5902 18.072 21.9431L14.7093 19.3315C14.0045 20.7413 13.6 22.3244 13.6 24C13.6 25.6755 14.0045 27.2587 14.7093 28.6684L18.0836 26.0569V26.0569Z" fill="#FBBC05"></path><path d="M24 34.4C26.808 34.4 29.1653 33.4756 30.8871 31.8809L27.6053 29.3387C26.7271 29.9511 25.5484 30.3787 24 30.3787C21.2498 30.3787 18.9156 28.5644 18.0836 26.0569L14.7209 28.6684C16.4311 32.0658 19.9324 34.4 24 34.4V34.4Z" fill="#34A853"></path></svg>
+
+            <p class="cs-item-text">
+              They are very professional, experienced and the craftsmanship is astounding.
+            </p>
+            <div class="cs-flex-group">
+              <span class="cs-reviewer">
+                <a style="color:black;" target="_blank" href="https://maps.app.goo.gl/ZZkvdzZsmrdVt2us7">Google Review</a> 
+              </span>
+              <span class="cs-rating" style="color:black; font-weight: bold;">5.0</span>
+              <img class="cs-item-stars" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="stars" width="96" height="16" loading="lazy" decoding="async">
+            </div>
+          </li>
+          
+
+        <li class="cs-item">
             <svg class="cs-item-img"  height="48"  viewBox="0 0 48 48"  width="48" xmlns="http://www.w3.org/2000/svg" fill="none" ><path d="M0 24C0 10.7452 10.7452 0 24 0C37.2548 0 48 10.7452 48 24C48 37.2548 37.2548 48 24 48C10.7452 48 0 37.2548 0 24Z" fill="white"></path><path d="M24 17.6213C25.9529 17.6213 27.2702 18.4649 28.0214 19.1698L30.9565 16.304C29.1538 14.6284 26.808 13.6 24 13.6C19.9325 13.6 16.4196 15.9342 14.7094 19.3315L18.072 21.9431C18.9156 19.4355 21.2498 17.6213 24 17.6213V17.6213Z" fill="#EA4335"></path><path d="M33.984 24.2311C33.984 23.376 33.9147 22.752 33.7644 22.1049H24V25.9644H29.7316C29.616 26.9235 28.992 28.368 27.6053 29.3386L30.8871 31.8809C32.8516 30.0666 33.984 27.3973 33.984 24.2311V24.2311Z" fill="#4285F4"></path><path d="M18.0836 26.0569C17.864 25.4098 17.7369 24.7164 17.7369 24C17.7369 23.2835 17.864 22.5902 18.072 21.9431L14.7093 19.3315C14.0045 20.7413 13.6 22.3244 13.6 24C13.6 25.6755 14.0045 27.2587 14.7093 28.6684L18.0836 26.0569V26.0569Z" fill="#FBBC05"></path><path d="M24 34.4C26.808 34.4 29.1653 33.4756 30.8871 31.8809L27.6053 29.3387C26.7271 29.9511 25.5484 30.3787 24 30.3787C21.2498 30.3787 18.9156 28.5644 18.0836 26.0569L14.7209 28.6684C16.4311 32.0658 19.9324 34.4 24 34.4V34.4Z" fill="#34A853"></path></svg>              <p class="cs-item-text">
                 Turned our old farm house into a special place. We were worried about finding the right company since our house is 100 years old. But we could not have picked a better one. They were unbelievable and did a truly incredible job on our house.              <div class="cs-flex-group">
                 <span class="cs-reviewer">
-                  <a target="_blank" href="https://maps.app.goo.gl/JNNr7p2bkE4wggvq5">Google Review</a> 
+                  <a style="color:black;" target="_blank" href="https://maps.app.goo.gl/JNNr7p2bkE4wggvq5">Google Review</a> 
                 </span>
                 <span class="cs-rating" style="color:black; font-weight: bold;">5.0</span>
                 <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="stars" width="96" height="16">
@@ -269,7 +354,7 @@
                 </svg>                <p class="cs-item-text">
                 They do great work. Call for a quote.                <div class="cs-flex-group">
                 <span class="cs-reviewer">
-                  <a target="_blank" href="https://www.facebook.com/profile.php?id=100076881590011&sk=reviews">Facebook Review</a> 
+                  <a style="color:black;" target="_blank" href="https://www.facebook.com/profile.php?id=100076881590011&sk=reviews">Facebook Review</a> 
                 </span>
                 <span class="cs-rating" style="color:black; font-weight: bold;">5.0</span>
                 <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="stars" width="96" height="16">
